data/derived/fa15/progs/unify/prog4099.ml.out
Characters 47-58:
  (b', b'!=b)), b);;
  ^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
